adapt to JDK8, don't ask why